--- a/etat_civil.html
+++ b/etat_civil.html
@@ -1,131 +1,203 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>État Civil - Mairie de Kolwezi</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-database.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>État Civil - Mairie de Kolwezi</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+        .font-\[Inter\] {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-database.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body class="bg-gray-50 text-gray-800 font-[Inter]">
 
-  <!-- Navbar identique à l’index -->
-  <nav class="bg-blue-900 text-white shadow sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 flex justify-between items-center py-4">
-      <a href="index.html" class="flex items-center text-2xl font-bold space-x-2">
-        <i class="fa-solid fa-landmark text-yellow-400"></i>
-        <span>Mairie de Kolwezi</span>
-      </a>
-      <ul class="hidden md:flex space-x-6 font-medium">
-        <li><a href="index.html" class="hover:text-yellow-400"><i class="fa-solid fa-house mr-1"></i>Accueil</a></li>
-        <li><a href="etat_civil.html" class="text-yellow-400"><i class="fa-solid fa-id-card mr-1"></i>État civil</a></li>
-        <li><a href="urbanisme.html" class="hover:text-yellow-400"><i class="fa-solid fa-city mr-1"></i>Urbanisme</a></li>
-        <li><a href="sante_publique.html" class="hover:text-yellow-400"><i class="fa-solid fa-hospital mr-1"></i>Santé</a></li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="bg-blue-900 text-white shadow sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-4 flex justify-between items-center py-4">
+            <a href="index.html" class="flex items-center text-2xl font-bold space-x-2">
+                <i class="fa-solid fa-landmark text-yellow-400"></i>
+                <span>Mairie de Kolwezi</span>
+            </a>
+            <ul class="hidden md:flex space-x-6 font-medium">
+                <li><a href="index.html" class="hover:text-yellow-400 transition duration-300"><i class="fa-solid fa-house mr-1"></i>Accueil</a></li>
+                <li><a href="etat_civil.html" class="text-yellow-400 border-b-2 border-yellow-400 pb-1"><i class="fa-solid fa-id-card mr-1"></i>État civil</a></li>
+                <li><a href="urbanisme.html" class="hover:text-yellow-400 transition duration-300"><i class="fa-solid fa-city mr-1"></i>Urbanisme</a></li>
+                <li><a href="sante_publique.html" class="hover:text-yellow-400 transition duration-300"><i class="fa-solid fa-hospital mr-1"></i>Santé</a></li>
+            </ul>
+        </div>
+    </nav>
 
-  <!-- Section principale -->
-  <main class="max-w-5xl mx-auto py-12 px-6 space-y-12">
+    <main class="max-w-6xl mx-auto py-16 px-6 space-y-16">
 
-    <!-- Titre -->
-    <section class="text-center">
-      <h1 class="text-4xl font-extrabold text-blue-900 mb-2">
-        <i class="fa-solid fa-id-card mr-2 text-yellow-500"></i>
-        Service de l’État Civil
-      </h1>
-      <p class="text-gray-600 text-lg italic">Mariage, naissance, décès — la mémoire administrative de notre cité.</p>
-    </section>
+        <header class="text-center bg-blue-100 p-10 rounded-xl shadow-inner">
+            <h1 class="text-5xl font-extrabold text-blue-900 mb-4">
+                <i class="fa-solid fa-scroll text-yellow-600 mr-3"></i>
+                Service de l’État Civil
+            </h1>
+            <p class="text-gray-700 text-xl italic max-w-2xl mx-auto">
+                Vos démarches administratives de vie : **naissance, mariage et décès**. Obtenez vos actes officiels en toute simplicité.
+            </p>
+        </header>
 
-    <!-- Présentation -->
-    <section class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-yellow-400">
-      <h2 class="text-2xl font-bold text-blue-900 mb-4">Nos services</h2>
-      <ul class="list-disc list-inside space-y-2 text-gray-700">
-        <li>Enregistrement des naissances et délivrance d’actes.</li>
-        <li>Enregistrement des mariages et délivrance de certificats.</li>
-        <li>Enregistrement des décès et mise à jour des registres.</li>
-        <li>Rectification ou duplication d’actes.</li>
-      </ul>
-    </section>
-
-    <!-- Zone Firebase -->
-    <section class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-blue-600">
-      <h2 class="text-2xl font-bold text-blue-900 mb-6">Formulaires disponibles</h2>
-      <div id="formulaires" class="space-y-4 text-gray-700">
-        <p class="italic text-gray-500">Chargement des formulaires depuis la base de données...</p>
-      </div>
-    </section>
-
-    <!-- Interaction citoyenne -->
-    <section class="bg-white shadow-lg rounded-xl p-8 border-t-4 border-green-500">
-      <h2 class="text-2xl font-bold text-blue-900 mb-4">Soumettre une demande</h2>
-      <form id="demandeForm" class="space-y-4">
-        <input type="text" id="nom" placeholder="Votre nom complet" class="w-full p-3 border rounded-lg focus:ring focus:ring-blue-200" required>
-        <input type="email" id="email" placeholder="Votre adresse e-mail" class="w-full p-3 border rounded-lg focus:ring focus:ring-blue-200" required>
-        <textarea id="message" placeholder="Votre demande ou question..." class="w-full p-3 border rounded-lg h-32 focus:ring focus:ring-blue-200" required></textarea>
-        <button type="submit" class="bg-blue-900 text-white px-6 py-3 rounded-lg hover:bg-blue-800 transition">Envoyer</button>
-      </form>
-    </section>
-
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-blue-900 text-white py-6 text-center mt-12">
-    <p>&copy; 2025 Mairie de Kolwezi — Tous droits réservés.</p>
-  </footer>
-
-  <!-- Firebase Config + JS -->
-  <script>
-    // Configuration Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyEXAMPLE-KEY-REMPLACE-MOI",
-      authDomain: "mairie-kolwezi.firebaseapp.com",
-      databaseURL: "https://mairie-kolwezi-default-rtdb.firebaseio.com",
-      projectId: "mairie-kolwezi",
-      storageBucket: "mairie-kolwezi.appspot.com",
-      messagingSenderId: "986543210",
-      appId: "1:986543210:web:abcdef123456"
-    };
-
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    // Charger les formulaires
-    const formulairesDiv = document.getElementById('formulaires');
-    db.ref('etat_civil/formulaires').on('value', (snapshot) => {
-      const data = snapshot.val();
-      formulairesDiv.innerHTML = '';
-      if (data) {
-        Object.values(data).forEach(item => {
-          formulairesDiv.innerHTML += `
-            <div class="p-4 border rounded-lg hover:bg-gray-50 transition">
-              <h3 class="font-semibold text-blue-800">${item.titre}</h3>
-              <p>${item.description}</p>
-              <a href="${item.lien}" class="text-blue-600 hover:underline">Télécharger</a>
+        <section>
+            <h2 class="text-3xl font-bold text-blue-900 mb-8 text-center border-b pb-3">Nos Prestations Principales</h2>
+            <div class="grid md:grid-cols-3 gap-8">
+                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-l-4 border-green-500">
+                    <i class="fa-solid fa-baby text-4xl text-green-600 mb-3"></i>
+                    <h3 class="text-xl font-bold text-blue-900 mb-2">Déclaration de Naissance</h3>
+                    <p class="text-gray-700 text-sm">Enregistrement de votre nouveau-né et obtention de l'acte de naissance. Délai légal de déclaration.</p>
+                    <a href="#formulaires" class="text-green-600 font-semibold mt-3 block hover:underline">Voir les formalités <i class="fa-solid fa-arrow-right ml-1"></i></a>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-l-4 border-yellow-500">
+                    <i class="fa-solid fa-ring text-4xl text-yellow-600 mb-3"></i>
+                    <h3 class="text-xl font-bold text-blue-900 mb-2">Célébration et Acte de Mariage</h3>
+                    <p class="text-gray-700 text-sm">Dossier de mariage, publication des bans et cérémonie civile à la Mairie.</p>
+                    <a href="#faq" class="text-yellow-600 font-semibold mt-3 block hover:underline">Documents requis <i class="fa-solid fa-arrow-right ml-1"></i></a>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-l-4 border-red-500">
+                    <i class="fa-solid fa-cross text-4xl text-red-600 mb-3"></i>
+                    <h3 class="text-xl font-bold text-blue-900 mb-2">Déclaration de Décès</h3>
+                    <p class="text-gray-700 text-sm">Enregistrement et délivrance de l'acte de décès pour les formalités funéraires.</p>
+                    <a href="#formulaires" class="text-red-600 font-semibold mt-3 block hover:underline">Procédure complète <i class="fa-solid fa-arrow-right ml-1"></i></a>
+                </div>
             </div>
-          `;
+        </section>
+
+        ---
+
+        <section id="formulaires" class="bg-white shadow-xl rounded-xl p-10 border-t-8 border-blue-600">
+            <h2 class="text-3xl font-bold text-blue-900 mb-8 flex items-center">
+                <i class="fa-solid fa-cloud-arrow-down mr-3 text-blue-600"></i>
+                Téléchargement des Formulaires Officiels
+            </h2>
+            <p class="text-gray-600 mb-6">Pour toute démarche, veuillez télécharger, remplir et déposer le formulaire correspondant à l'accueil du service.</p>
+
+            <div id="formulaires" class="space-y-4 text-gray-700">
+                <div class="flex justify-center items-center h-24">
+                    <i class="fa-solid fa-spinner fa-spin text-4xl text-gray-400 mr-3"></i>
+                    <p class="italic text-gray-500">Chargement des formulaires depuis la base de données...</p>
+                </div>
+                </div>
+        </section>
+
+        ---
+
+        <section class="bg-white shadow-xl rounded-xl p-10 border-t-8 border-green-700" id="contact">
+            <h2 class="text-3xl font-bold text-blue-900 mb-6 flex items-center">
+                <i class="fa-solid fa-paper-plane mr-3 text-green-700"></i>
+                Nous Contacter pour une Question Spécifique
+            </h2>
+            <p class="text-gray-600 mb-6">Utilisez ce formulaire uniquement pour des questions générales ou des cas complexes ne nécessitant pas l'envoi d'un formulaire officiel.</p>
+            <form id="demandeForm" class="space-y-5">
+                <input type="text" id="nom" placeholder="Votre nom complet" class="w-full p-4 border border-gray-300 rounded-lg focus:ring-4 focus:ring-blue-200 focus:border-blue-500 transition" required>
+                <input type="email" id="email" placeholder="Votre adresse e-mail" class="w-full p-4 border border-gray-300 rounded-lg focus:ring-4 focus:ring-blue-200 focus:border-blue-500 transition" required>
+                <textarea id="message" placeholder="Votre demande ou question détaillée..." class="w-full p-4 border border-gray-300 rounded-lg h-40 focus:ring-4 focus:ring-blue-200 focus:border-blue-500 transition" required></textarea>
+                <button type="submit" class="bg-blue-900 text-white px-8 py-4 rounded-xl font-semibold text-lg hover:bg-blue-700 transition duration-300 shadow-md">
+                    <i class="fa-solid fa-envelope mr-2"></i> Envoyer ma Demande
+                </button>
+            </form>
+        </section>
+
+        ---
+
+        <section id="faq" class="bg-gray-100 rounded-xl p-10 shadow-lg">
+            <h2 class="text-3xl font-bold text-blue-900 mb-6 text-center">Questions Fréquentes (FAQ)</h2>
+            <div class="space-y-4">
+                <details class="bg-white p-4 rounded-lg shadow cursor-pointer">
+                    <summary class="font-semibold text-lg text-blue-800 flex justify-between items-center">
+                        Quel est le délai maximum pour déclarer une naissance ?
+                        <i class="fa-solid fa-chevron-down text-sm ml-2"></i>
+                    </summary>
+                    <p class="pt-3 text-gray-700 border-t mt-3">Le délai légal pour la déclaration d’une naissance est généralement de **quinze (15) jours** suivant l'accouchement. Passé ce délai, une procédure judiciaire peut être nécessaire.</p>
+                </details>
+
+                <details class="bg-white p-4 rounded-lg shadow cursor-pointer">
+                    <summary class="font-semibold text-lg text-blue-800 flex justify-between items-center">
+                        Puis-je demander un acte de mariage en ligne ?
+                        <i class="fa-solid fa-chevron-down text-sm ml-2"></i>
+                    </summary>
+                    <p class="pt-3 text-gray-700 border-t mt-3">Pour le moment, l’**acte de mariage** original doit être retiré physiquement à la Mairie pour des raisons de sécurité et d'authentification. Vous pouvez préparer votre dossier via les formulaires ci-dessus.</p>
+                </details>
+
+                <details class="bg-white p-4 rounded-lg shadow cursor-pointer">
+                    <summary class="font-semibold text-lg text-blue-800 flex justify-between items-center">
+                        Où se situe le service d'État Civil ?
+                        <i class="fa-solid fa-chevron-down text-sm ml-2"></i>
+                    </summary>
+                    <p class="pt-3 text-gray-700 border-t mt-3">Le Service de l'État Civil est situé au rez-de-chaussée de la **Mairie Centrale de Kolwezi**. Nos bureaux sont ouverts du lundi au vendredi, de 8h00 à 15h30.</p>
+                </details>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="bg-blue-900 text-white py-8 text-center mt-16">
+        <p>&copy; 2025 Mairie de Kolwezi — Tous droits réservés. | Conçu pour servir le citoyen.</p>
+    </footer>
+
+    <script>
+        // Configuration Firebase (IMPORTANT : REMPLACER AVEC VOTRE VRAIE CLÉ)
+        const firebaseConfig = {
+            apiKey: "AIzaSyEXAMPLE-KEY-REMPLACE-MOI",
+            authDomain: "mairie-kolwezi.firebaseapp.com",
+            databaseURL: "https://mairie-kolwezi-default-rtdb.firebaseio.com",
+            projectId: "mairie-kolwezi",
+            storageBucket: "mairie-kolwezi.appspot.com",
+            messagingSenderId: "986543210",
+            appId: "1:986543210:web:abcdef123456"
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+
+        // Charger les formulaires
+        const formulairesDiv = document.getElementById('formulaires');
+        db.ref('etat_civil/formulaires').on('value', (snapshot) => {
+            const data = snapshot.val();
+            formulairesDiv.innerHTML = ''; // Nettoyer l'indicateur de chargement
+            if (data) {
+                Object.values(data).forEach(item => {
+                    formulairesDiv.innerHTML += `
+                        <div class="p-5 border border-gray-200 rounded-xl hover:bg-blue-50 transition flex justify-between items-center">
+                            <div>
+                                <h3 class="font-bold text-xl text-blue-900">${item.titre}</h3>
+                                <p class="text-sm text-gray-600">${item.description}</p>
+                            </div>
+                            <a href="${item.lien}" target="_blank" class="bg-yellow-500 text-blue-900 px-5 py-2 rounded-full font-semibold hover:bg-yellow-400 transition flex items-center shadow-md">
+                                <i class="fa-solid fa-download mr-2"></i> Télécharger
+                            </a>
+                        </div>
+                    `;
+                });
+            } else {
+                formulairesDiv.innerHTML = '<p class="text-gray-500 italic p-4 border rounded-lg bg-gray-50 text-center"><i class="fa-solid fa-circle-info mr-2"></i> Aucun formulaire disponible pour le moment. Veuillez contacter la Mairie.</p>';
+            }
         });
-      } else {
-        formulairesDiv.innerHTML = '<p class="text-gray-500 italic">Aucun formulaire disponible pour le moment.</p>';
-      }
-    });
 
-    // Formulaire de demande
-    document.getElementById('demandeForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      const nom = document.getElementById('nom').value;
-      const email = document.getElementById('email').value;
-      const message = document.getElementById('message').value;
+        // Formulaire de demande (Soumettre à la base de données)
+        document.getElementById('demandeForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const nom = document.getElementById('nom').value;
+            const email = document.getElementById('email').value;
+            const message = document.getElementById('message').value;
 
-      db.ref('etat_civil/demandes').push({ nom, email, message, date: new Date().toISOString() });
-
-      alert("Votre demande a été soumise avec succès !");
-      e.target.reset();
-    });
-  </script>
+            // Ajout des données à la référence 'etat_civil/demandes'
+            db.ref('etat_civil/demandes').push({ nom, email, message, date: new Date().toISOString() })
+                .then(() => {
+                    alert("✅ Votre demande a été soumise avec succès ! Un agent vous contactera par e-mail.");
+                    e.target.reset();
+                })
+                .catch((error) => {
+                    alert("❌ Une erreur est survenue lors de l'envoi de votre demande : " + error.message);
+                });
+        });
+    </script>
 
 </body>
 </html>
