--- a/etat_civil.html
+++ b/etat_civil.html
@@ -27,56 +27,87 @@
             <ul class="hidden md:flex space-x-6 font-medium">
                 <li><a href="index.html" class="hover:text-yellow-400 transition duration-300"><i class="fa-solid fa-house mr-1"></i>Accueil</a></li>
                 <li><a href="etat_civil.html" class="text-yellow-400 border-b-2 border-yellow-400 pb-1"><i class="fa-solid fa-id-card mr-1"></i>État civil</a></li>
-                <li><a href="urbanisme.html" class="hover:text-yellow-400 transition duration-300"><i class="fa-solid fa-city mr-1"></i>Urbanisme</a></li>
-                <li><a href="sante_publique.html" class="hover:text-yellow-400 transition duration-300"><i class="fa-solid fa-hospital mr-1"></i>Santé</a></li>
-            </ul>
+                </ul>
         </div>
     </nav>
 
     <main class="max-w-6xl mx-auto py-16 px-6 space-y-16">
 
-        <header class="text-center bg-blue-100 p-10 rounded-xl shadow-inner">
+        <header class="text-center bg-blue-100 p-10 rounded-xl shadow-2xl">
             <h1 class="text-5xl font-extrabold text-blue-900 mb-4">
                 <i class="fa-solid fa-scroll text-yellow-600 mr-3"></i>
                 Service de l’État Civil
             </h1>
-            <p class="text-gray-700 text-xl italic max-w-2xl mx-auto">
-                Vos démarches administratives de vie : **naissance, mariage et décès**. Obtenez vos actes officiels en toute simplicité.
+            <p class="text-gray-700 text-xl italic max-w-3xl mx-auto">
+                L'enregistrement des événements majeurs de votre vie : **naissance, mariage, décès**. Obtenez vos actes officiels sans délai.
             </p>
         </header>
+        
+        <section class="grid md:grid-cols-2 gap-8">
+            <div class="bg-white p-6 rounded-xl shadow-lg border-l-4 border-blue-600">
+                <h3 class="text-2xl font-bold text-blue-900 mb-4 flex items-center">
+                    <i class="fa-solid fa-location-dot text-blue-600 mr-3"></i>
+                    Informations Pratiques
+                </h3>
+                <p class="text-gray-700 mb-2">
+                    **Adresse :** Bâtiment Principal de la Mairie, Rez-de-Chaussée.
+                </p>
+                <div class="space-y-1">
+                    <p class="font-semibold text-gray-800">Horaires d'ouverture :</p>
+                    <p>
+                        <i class="fa-solid fa-clock mr-2 text-yellow-500"></i>
+                        Lundi au Vendredi : **08h00 - 15h30**
+                    </p>
+                    <p>
+                        <i class="fa-solid fa-calendar-times mr-2 text-red-500"></i>
+                        Samedi, Dimanche et Jours Fériés : **Fermé**
+                    </p>
+                </div>
+            </div>
+
+            <div class="bg-yellow-50 p-6 rounded-xl shadow-lg border-l-4 border-yellow-600">
+                <h3 class="text-2xl font-bold text-yellow-800 mb-4 flex items-center">
+                    <i class="fa-solid fa-triangle-exclamation text-yellow-600 mr-3"></i>
+                    Avis Important
+                </h3>
+                <p class="text-gray-700">
+                    <span class="font-bold">Authentification des Actes :</span> Tous les actes d'état civil originaux doivent être retirés et légalisés sur place. Aucun document officiel n'est transmis par e-mail ou courrier. Prévoyez une pièce d'identité.
+                </p>
+            </div>
+        </section>
 
         <section>
-            <h2 class="text-3xl font-bold text-blue-900 mb-8 text-center border-b pb-3">Nos Prestations Principales</h2>
+            <h2 class="text-3xl font-bold text-blue-900 mb-8 text-center border-b pb-3">Nos Prestations Détaillées</h2>
             <div class="grid md:grid-cols-3 gap-8">
-                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-l-4 border-green-500">
-                    <i class="fa-solid fa-baby text-4xl text-green-600 mb-3"></i>
+                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-b-4 border-green-500 transform hover:scale-[1.02]">
+                    <i class="fa-solid fa-baby-carriage text-4xl text-green-600 mb-3"></i>
                     <h3 class="text-xl font-bold text-blue-900 mb-2">Déclaration de Naissance</h3>
-                    <p class="text-gray-700 text-sm">Enregistrement de votre nouveau-né et obtention de l'acte de naissance. Délai légal de déclaration.</p>
-                    <a href="#formulaires" class="text-green-600 font-semibold mt-3 block hover:underline">Voir les formalités <i class="fa-solid fa-arrow-right ml-1"></i></a>
+                    <p class="text-gray-700 text-sm">Formalités, pièces à fournir, et délais légaux pour l'enregistrement de votre enfant.</p>
+                    <a href="#formulaires" class="text-green-600 font-semibold mt-3 block hover:underline">Accéder aux formulaires <i class="fa-solid fa-arrow-right ml-1"></i></a>
                 </div>
-                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-l-4 border-yellow-500">
-                    <i class="fa-solid fa-ring text-4xl text-yellow-600 mb-3"></i>
-                    <h3 class="text-xl font-bold text-blue-900 mb-2">Célébration et Acte de Mariage</h3>
-                    <p class="text-gray-700 text-sm">Dossier de mariage, publication des bans et cérémonie civile à la Mairie.</p>
-                    <a href="#faq" class="text-yellow-600 font-semibold mt-3 block hover:underline">Documents requis <i class="fa-solid fa-arrow-right ml-1"></i></a>
+                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-b-4 border-yellow-500 transform hover:scale-[1.02]">
+                    <i class="fa-solid fa-heart-pulse text-4xl text-yellow-600 mb-3"></i>
+                    <h3 class="text-xl font-bold text-blue-900 mb-2">Mariage Civil</h3>
+                    <p class="text-gray-700 text-sm">Préparation du dossier, dépôt des bans, conditions et cérémonie officielle.</p>
+                    <a href="#faq" class="text-yellow-600 font-semibold mt-3 block hover:underline">Consulter la FAQ <i class="fa-solid fa-arrow-right ml-1"></i></a>
                 </div>
-                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-l-4 border-red-500">
-                    <i class="fa-solid fa-cross text-4xl text-red-600 mb-3"></i>
+                <div class="bg-white p-6 rounded-xl shadow-xl hover:shadow-2xl transition duration-300 border-b-4 border-red-500 transform hover:scale-[1.02]">
+                    <i class="fa-solid fa-skull-crossbones text-4xl text-red-600 mb-3"></i>
                     <h3 class="text-xl font-bold text-blue-900 mb-2">Déclaration de Décès</h3>
-                    <p class="text-gray-700 text-sm">Enregistrement et délivrance de l'acte de décès pour les formalités funéraires.</p>
-                    <a href="#formulaires" class="text-red-600 font-semibold mt-3 block hover:underline">Procédure complète <i class="fa-solid fa-arrow-right ml-1"></i></a>
+                    <p class="text-gray-700 text-sm">Procédure d'enregistrement obligatoire et obtention des documents nécessaires aux obsèques.</p>
+                    <a href="#formulaires" class="text-red-600 font-semibold mt-3 block hover:underline">Voir la procédure <i class="fa-solid fa-arrow-right ml-1"></i></a>
                 </div>
             </div>
         </section>
 
         ---
 
-        <section id="formulaires" class="bg-white shadow-xl rounded-xl p-10 border-t-8 border-blue-600">
+        <section id="formulaires" class="bg-white shadow-2xl rounded-xl p-10 border-t-8 border-blue-600">
             <h2 class="text-3xl font-bold text-blue-900 mb-8 flex items-center">
-                <i class="fa-solid fa-cloud-arrow-down mr-3 text-blue-600"></i>
+                <i class="fa-solid fa-file-arrow-down mr-3 text-blue-600"></i>
                 Téléchargement des Formulaires Officiels
             </h2>
-            <p class="text-gray-600 mb-6">Pour toute démarche, veuillez télécharger, remplir et déposer le formulaire correspondant à l'accueil du service.</p>
+            <p class="text-gray-600 mb-6">Téléchargez le formulaire requis, remplissez-le et déposez-le à la Mairie pour lancer votre démarche.</p>
 
             <div id="formulaires" class="space-y-4 text-gray-700">
                 <div class="flex justify-center items-center h-24">
@@ -88,49 +119,49 @@
 
         ---
 
-        <section class="bg-white shadow-xl rounded-xl p-10 border-t-8 border-green-700" id="contact">
+        <section class="bg-white shadow-2xl rounded-xl p-10 border-t-8 border-green-700" id="contact">
             <h2 class="text-3xl font-bold text-blue-900 mb-6 flex items-center">
-                <i class="fa-solid fa-paper-plane mr-3 text-green-700"></i>
-                Nous Contacter pour une Question Spécifique
+                <i class="fa-solid fa-comment-dots mr-3 text-green-700"></i>
+                Contactez-nous (Questions Non Urgentes)
             </h2>
-            <p class="text-gray-600 mb-6">Utilisez ce formulaire uniquement pour des questions générales ou des cas complexes ne nécessitant pas l'envoi d'un formulaire officiel.</p>
+            <p class="text-gray-600 mb-6">Pour toute question ne nécessitant pas un déplacement immédiat, utilisez ce formulaire. Pour les urgences (ex: décès), veuillez appeler directement.</p>
             <form id="demandeForm" class="space-y-5">
                 <input type="text" id="nom" placeholder="Votre nom complet" class="w-full p-4 border border-gray-300 rounded-lg focus:ring-4 focus:ring-blue-200 focus:border-blue-500 transition" required>
                 <input type="email" id="email" placeholder="Votre adresse e-mail" class="w-full p-4 border border-gray-300 rounded-lg focus:ring-4 focus:ring-blue-200 focus:border-blue-500 transition" required>
                 <textarea id="message" placeholder="Votre demande ou question détaillée..." class="w-full p-4 border border-gray-300 rounded-lg h-40 focus:ring-4 focus:ring-blue-200 focus:border-blue-500 transition" required></textarea>
-                <button type="submit" class="bg-blue-900 text-white px-8 py-4 rounded-xl font-semibold text-lg hover:bg-blue-700 transition duration-300 shadow-md">
-                    <i class="fa-solid fa-envelope mr-2"></i> Envoyer ma Demande
+                <button type="submit" class="bg-blue-900 text-white px-8 py-4 rounded-xl font-semibold text-lg hover:bg-blue-700 transition duration-300 shadow-lg">
+                    <i class="fa-solid fa-paper-plane mr-2"></i> Envoyer
                 </button>
             </form>
         </section>
 
         ---
 
-        <section id="faq" class="bg-gray-100 rounded-xl p-10 shadow-lg">
-            <h2 class="text-3xl font-bold text-blue-900 mb-6 text-center">Questions Fréquentes (FAQ)</h2>
+        <section id="faq" class="bg-gray-100 rounded-xl p-10 shadow-inner">
+            <h2 class="text-3xl font-bold text-blue-900 mb-6 text-center">Foire Aux Questions (FAQ)</h2>
             <div class="space-y-4">
-                <details class="bg-white p-4 rounded-lg shadow cursor-pointer">
+                <details class="bg-white p-4 rounded-lg shadow cursor-pointer hover:bg-gray-50 transition duration-200">
                     <summary class="font-semibold text-lg text-blue-800 flex justify-between items-center">
                         Quel est le délai maximum pour déclarer une naissance ?
                         <i class="fa-solid fa-chevron-down text-sm ml-2"></i>
                     </summary>
-                    <p class="pt-3 text-gray-700 border-t mt-3">Le délai légal pour la déclaration d’une naissance est généralement de **quinze (15) jours** suivant l'accouchement. Passé ce délai, une procédure judiciaire peut être nécessaire.</p>
+                    <p class="pt-3 text-gray-700 border-t mt-3">Le délai légal pour la déclaration d’une naissance est généralement de **quinze (15) jours** suivant l'accouchement. Passé ce délai, une procédure judiciaire peut être nécessaire pour établir l'acte.</p>
                 </details>
 
-                <details class="bg-white p-4 rounded-lg shadow cursor-pointer">
+                <details class="bg-white p-4 rounded-lg shadow cursor-pointer hover:bg-gray-50 transition duration-200">
                     <summary class="font-semibold text-lg text-blue-800 flex justify-between items-center">
-                        Puis-je demander un acte de mariage en ligne ?
+                        Quelles sont les pièces nécessaires pour un mariage ?
                         <i class="fa-solid fa-chevron-down text-sm ml-2"></i>
                     </summary>
-                    <p class="pt-3 text-gray-700 border-t mt-3">Pour le moment, l’**acte de mariage** original doit être retiré physiquement à la Mairie pour des raisons de sécurité et d'authentification. Vous pouvez préparer votre dossier via les formulaires ci-dessus.</p>
+                    <p class="pt-3 text-gray-700 border-t mt-3">Les pièces incluent notamment : une pièce d'identité valide, l'acte de naissance récent, le certificat de célibat (ou de divorce/veuvage), et les fiches de renseignements à télécharger ci-dessus.</p>
                 </details>
 
-                <details class="bg-white p-4 rounded-lg shadow cursor-pointer">
+                <details class="bg-white p-4 rounded-lg shadow cursor-pointer hover:bg-gray-50 transition duration-200">
                     <summary class="font-semibold text-lg text-blue-800 flex justify-between items-center">
-                        Où se situe le service d'État Civil ?
+                        Comment demander une copie ou un extrait d'acte ?
                         <i class="fa-solid fa-chevron-down text-sm ml-2"></i>
                     </summary>
-                    <p class="pt-3 text-gray-700 border-t mt-3">Le Service de l'État Civil est situé au rez-de-chaussée de la **Mairie Centrale de Kolwezi**. Nos bureaux sont ouverts du lundi au vendredi, de 8h00 à 15h30.</p>
+                    <p class="pt-3 text-gray-700 border-t mt-3">La demande s'effectue via un formulaire spécifique (téléchargeable ci-dessus) et doit être déposée physiquement à la Mairie. Prévoyez une pièce justificative de votre lien avec l'acte.</p>
                 </details>
             </div>
         </section>
@@ -138,7 +169,7 @@
     </main>
 
     <footer class="bg-blue-900 text-white py-8 text-center mt-16">
-        <p>&copy; 2025 Mairie de Kolwezi — Tous droits réservés. | Conçu pour servir le citoyen.</p>
+        <p>&copy; 2025 Mairie de Kolwezi — Tous droits réservés. | Service de l'État Civil.</p>
     </footer>
 
     <script>
@@ -170,7 +201,7 @@
                                 <p class="text-sm text-gray-600">${item.description}</p>
                             </div>
                             <a href="${item.lien}" target="_blank" class="bg-yellow-500 text-blue-900 px-5 py-2 rounded-full font-semibold hover:bg-yellow-400 transition flex items-center shadow-md">
-                                <i class="fa-solid fa-download mr-2"></i> Télécharger
+                                <i class="fa-solid fa-file-pdf mr-2"></i> Télécharger
                             </a>
                         </div>
                     `;
